# saimiris

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  test.csv
.github/workflows/: cicd.yml  clean.yml  docker.yml  rust.yml
integration/: README.md  compose.yml  probes.txt  probes_local.txt
integration/config/clickhouse/docker-entrypoint-initdb.d/: init.sql
integration/config/saimiris/: saimiris.yml
integration/tests/: test_integration.sh  test_quick.sh
schemas/: probe.capnp  reply.capnp
src/: auth.rs  config.rs  consumer.rs  handler.rs  lib.rs  main.rs  probe.rs  probe_capnp.rs  prober.rs  producer.rs  reply.rs  reply_capnp.rs  utils.rs
src/agent/: consumer.rs  gateway.rs  handler.rs  mod.rs  producer.rs  receiver.rs  sender.rs
src/client/: generate.rs  handler.rs  mod.rs  producer.rs  target.rs
src/config/: agent.rs  caracat.rs  client.rs  kafka.rs  mod.rs
src/prober/: consumer.rs  handler.rs  mod.rs  prober.rs  producer.rs
testbed/: README.md  compose.yml  probes.txt
testbed/config/clickhouse/docker-entrypoint-initdb.d/: init.sql
testbed/config/osiris/: osiris.yml
testbed/config/redpanda/: entrypoint.sh  redpanda.yml
testbed/config/saimiris/: osiris.yml  saimiris.yml
tests/: agent_unit.rs  caracat_config_defaults.rs  client_unit.rs  ip_prefix_validation.rs  kafka_auth.rs  measurement_tracking.rs  probe_deserialize.rs
