[package]
name = "saimiris"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "Internet Measurements Probing Pipeline"
repository = "https://github.com/nxthdr/saimiris"
homepage = "https://nxthdr.dev"
keywords = ["internet", "measurements", "traceroute", "ping"]
edition = "2021"
exclude = [
    ".github/*",
    "integration/*",
    "logo/*",
    "renovate.json",
]

[dependencies]
anyhow = "1.0.95"
caracat = "1.4.2"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
config = "0.15.6"
hyperloglog = "1.0.2"
nanoid = "0.4.0"
pcap = "2.2.0"
rdkafka = { version = "0.37.0", features = ["sasl", "ssl"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
